update city name

--- a/pogoda.html
+++ b/pogoda.html
@@ -21,7 +21,7 @@
         </div>
         <div class="bottom">
             <h1>Around the World</h1>
-            <p>New York</p>
+            <p>Old York</p>
             <p>Los Angeles</p>
             <p>Chicago</p>
             <p>Houston</p>
